--- a/index.css
+++ b/index.css
@@ -13,12 +13,48 @@ h4,
 h5,
 h6 {
   font-family: Bitter, serif;
+  font-weight: 500;
+}
+
+h1 {
+  font-size: 80px;
+  font-weight: 400;
+  letter-spacing: -1.5px;
+}
+
+h2 {
+  font-size: 50px;
+  letter-spacing: -0.5px;
+}
+
+h3 {
+  font-size: 38px;
+  letter-spacing: 0px;
+}
+
+h4 {
+  font-size: 30px;
+  letter-spacing: 0.25px;
+}
+
+h5 {
+  font-size: 24px;
+  letter-spacing: 0.25px;
+}
+
+h6 {
+  font-size: 20px;
+  letter-spacing: 0.25px;
 }
 
 .content {
   max-width: 900px;
   margin: 0 auto;
   padding: 32px;
+}
+
+.content h3 {
+  text-transform: capitalize;
 }
 
 .info {
@@ -34,33 +70,23 @@ h6 {
 }
 
 .headline {
-   text-transform: uppercase;
-   font-weight: 500;
-   letter-spacing: 0px;
-   margin: 40px 0;
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 18px;
+  letter-spacing: 0px;
+  margin: 40px 0;
 }
 
-.headline span {
-   color: #e95400;
- }
+.quote {
+  font-style: italic;
+  font-size: 14px;
+  border-left: 2px solid #e95400;
+  padding-left: 16px;
+  margin: 32px 0 32px 32px;
+}
 
-h2 {
-   font-size: 50px;
-   font-weight: 500;
-   letter-spacing: -0.5px;
- }
-
- .quote {
-   font-style: italic;
-   font-size: 14px;
-   border-left: 2px solid #e95400;
-   padding-left: 16px;
-   margin: 32px 0 32px 32px;
- }
- 
- .quote cite {
-   display: block;
-   font-weight: bold;
-   margin-left: 20px;
- }
- 
+.quote cite {
+  display: block;
+  font-weight: bold;
+  margin-left: 20px;
+}
